# lotsofcoresbook2code

./: README.md
Pearls2_Chapter09/Dependencies/src/qdpxx/: AUTHORS  ChangeLog  INSTALL  INSTALL_EXAMPLES  Makefile  Makefile.am  Makefile.in  NEWS  configure  configure.ac
Pearls2_Chapter09/Dependencies/src/qdpxx/PETE/: QDPClasses.in  QDPOps.in
Pearls2_Chapter09/Dependencies/src/qdpxx/autom4te.cache/: requests  traces.1
Pearls2_Chapter09/Dependencies/src/qdpxx/docs/: manual.tex
Pearls2_Chapter09/Dependencies/src/qdpxx/examples/: baryon_w.cc  cblas1.cc  cblas1.h  examples.h  jlab_sse.h  junk.cc  lhpc2ildg.cc  linalg.h  linalg1.cc  linalg2.c  nersc2ildg.xml  polylp.cc  record.xml  rgauge.cc  t_basic.cc  t_basic.intel-scalar.xml  t_blas.cc  t_blas_g5.cc  t_blas_g5_2.cc  t_blas_g5_3.cc  t_cblas.cc  t_dprec_ildg.lime  t_dslashm.cc  t_foo.input  t_formfac.cc  t_io.cc  t_iprod.cc  t_map_obj_disk.cc  t_mesplq.cc  t_nml.intel-scalar.output  t_qio.cc  t_qio.intel-scalar.xml  t_qio_factory.cc  t_shift.cc  t_shift.intel-scalar.xml  t_spectrum.cc  t_spectrum.intel-scalar.xml  t_spinproj.cc  t_transpose_spin.cc  t_xml.intel-scalar.output1  (+4 more)
Pearls2_Chapter09/Dependencies/src/qdpxx/include/: Makefile.am  Makefile.in  QDPOperators.h  qdp_arrays.h  qdp_byteorder.h  qdp_config_internal.h.in  qdp_crc32.h  qdp_db.h  qdp_default_allocator.h  qdp_disk_map_slice.h  qdp_globalfuncs.h  qdp_hdf5.h  qdp_init.h  qdp_layout.h  qdp_map.h  qdp_map_obj.h  qdp_map_obj_memory.h  qdp_outersubtype.h  qdp_parscalar_global_sum.h  qdp_parscalarvec_specific.h  qdp_primcolormat.h  qdp_primmatrix.h  qdp_primscalar.h  qdp_primseed.h  qdp_primspinmat.h  qdp_primspinvec.h  qdp_primvector.h  qdp_profile.h  qdp_qdpexpr.h  qdp_qdpio.h  qdp_qdpsubtype.h  qdp_qmp_extensions.h  qdp_random.h  qdp_scalarsite_pabasm.h  qdp_simpleword.h  qdp_singleton.h  qdp_specializations.h  qdp_sse_intrin.h  qdp_stdio.h  qdp_threadbind.h  (+2 more)
Pearls2_Chapter09/Dependencies/src/qdpxx/lib/: Makefile.in  qdp_bgq_threadbind.cc  qdp_default_allocator.cc  qdp_generic_threadbind.cc  qdp_io.cc  qdp_iogauge.cc  qdp_map.cc  qdp_map_obj_disk.cc  qdp_parscalar_global_sum.cc  qdp_parscalar_init.cc  qdp_parscalar_layout.cc  qdp_parscalarvec_layout.cc  qdp_parscalarvec_specific.cc  qdp_qio_strings.cc  qdp_qmp_extensions.cc  qdp_random.cc  qdp_rannyu.cc  qdp_scalar_specific.cc  qdp_scalarsite_specific.cc  qdp_scalarsite_sse.cc.kahan  qdp_scalarvecsite_specific.cc  qdp_scalarvecsite_sse.cc  qdp_stdio.cc  qdp_strnlen.cc  qdp_xmlio.cc
Pearls2_Chapter09/Dependencies/src/qdpxx/other_libs/: Makefile.am
Pearls2_Chapter09/Dependencies/src/qdpxx/tests/: Makefile.in  testCMulDouble.h  testLocalSumSqDouble.cc  testLocalVcdotDouble.cc  testLocalVcdotRealDouble.h  testMatPeqMatDouble.cc  testMatPeqMatDouble.h  testMatScalMultDouble.h  testVScalDouble.h  testVaxmyDouble.cc  testVaxpbyDouble.cc  test_matmat_double.cc  timeMatEqHermHermDouble.cc  timeMatEqHermMatDouble.h  timeMatEqMatHermDouble.cc  timeMatEqMatHermDouble.h  timeVaxpyDouble.cc  time_matmat_double.cc  time_vaxpy_double.cc
Pearls2_Chapter09/FinalAVX/qphix/: COPYING  configure.ac
Pearls2_Chapter09/FinalAVX/qphix/include/qphix/: clover_dslash_body.h  dslash_utils.h  qphix_config_internal.h.in
Pearls2_Chapter09/FinalAVX/qphix/tests/: timeClovNoQDP.h  timeDslashNoQDP.cc
Pearls2_Chapter09/Original/cpp_wilson_dslash/: AUTHORS  README  configure.ac
Pearls2_Chapter09/Original/cpp_wilson_dslash/autom4te.cache/: output.0
Pearls2_Chapter09/Original/cpp_wilson_dslash/include/: cache.h  cpp_clover_site_apply_32bit_sse.h  cpp_clover_types.h  cpp_dslash_matvec32bit_c.h  cpp_dslash_matvec64bit_c.h  cpp_dslash_parscalar_decomp_32bit_c.h  cpp_dslash_parscalar_decomp_32bit_sse2.h  cpp_dslash_parscalar_decomp_hvv_32bit_c.h  cpp_dslash_parscalar_decomp_hvv_64bit_sse2.h  cpp_dslash_parscalar_mvv_recons_64bit_c.h  cpp_dslash_parscalar_recons_64bit_sse2.h  cpp_dslash_parscalar_utils_64bit.h  cpp_dslash_qdp_packer.h  cpp_dslash_scalar.h  cpp_dslash_scalar_32bit_c.h  cpp_dslash_scalar_64bit.h  cpp_dslash_scalar_64bit_c.h  cpp_dslash_types.h  dispatch_parscalar.h  dispatch_scalar.h  dslash_config_internal.h.in  shift_table_3d_scalar.h  shift_table_parscalar_types.h  sse_sign_32bit.h  sse_sign_64bit.h
Pearls2_Chapter09/Original/cpp_wilson_dslash/lib/: Makefile.am  cpp_clover_parscalar_32bit.cc  cpp_dslash_3d_scalar_32bit.cc  cpp_dslash_3d_scalar_64bit.cc  cpp_dslash_parscalar_32bit.cc  cpp_dslash_parscalar_3d_32bit.cc  cpp_dslash_scalar_32bit.cc  cpp_dslash_scalar_64bit.cc  dispatch_parscalar.cc  dispatch_scalar.cc  qdp_packer_3d.cc  qdp_packer_nopad.cc
Pearls2_Chapter09/Original/cpp_wilson_dslash/tests/: Makefile.am  dslash_3d_w.cc  sse32.h  sse64.h  t_site_ops_scalar.cc  testDecomp32bit.cc  testDecomp64bit.cc  testDecompHvv.h  testDslash3D.cc  testDslashFull.h  testMvvRecons64bit.cc  testRecons.h  testRecons64bit.cc  testSiteDslash64bit.cc  timeClover.h  timeDslash3D.h  time_clover.cc  time_dslash_3d.cc  unittest.h
Pearls2_Chapter09/VectorPrefL1/qphix/tests/: Makefile.am
c09.code/Dependencies/src/qdpxx/examples/: Makefile.am  Makefile.in  blas1.cc  blas1.h  dslashm_w.cc  expm12.cc  file.xml  formfac_w.cc  mesons_w.cc  mesplq.cc  nersc2ildg.cc  reunit.cc  t_clov_force.cc  t_cugauge.cc  t_db.cc  t_dslashm.intel-scalar.xml  t_entry.cc  t_entry.intel-scalar.xml  t_exotic.cc  t_exotic.intel-scalar.xml  t_foo.cc  t_formfac.intel-scalar.xml  t_gsum.cc  t_io.intel-scalar.xml  t_linalg.cc  t_map_obj_memory.cc  t_mesplq.intel-scalar.xml  t_nersc.cc  t_nersc.intel-scalar.xml  t_nml.input  t_partfile.cc  (+15 more)
c09.code/Original/cpp_wilson_dslash/include/: Makefile.am  cpp_clover.h  cpp_clover_odd_odd_parscalar_32bit.h  cpp_clover_odd_odd_parscalar_64bit.h  cpp_clover_parscalar.h  cpp_clover_scalar.h  cpp_clover_site_apply_32bit.h  cpp_clover_site_apply_64bit_c.h  cpp_dslash.h  cpp_dslash_parscalar.h  cpp_dslash_parscalar_decomp_hvv_32bit_sse2.h  cpp_dslash_scalar_32bit.h  cpp_dslash_scalar_32bit_sse.h  cpp_dslash_scalar_64bit_sse.h  dslash_config.h  tables_parscalar.h
c09.code/Scalar/qphix/lib/: Makefile.am  generic_threadbind.cc
(+5109 files in other folders)
