#
# Recurse down into lib (to build the library)
#                   examples (build examples)
#                   includes (to install includes)
#
SUBDIRS = lib examples include other_libs tests

#
# The end user's configuration script
# 
bin_SCRIPTS=qdp++-config

#
# Some things that we want in the distribution tarball 
#
EXTRA_DIST = PETE/QDPClasses.in PETE/QDPOps.in  PETE/Tools docs  install_scripts
